css/custom-style.css
/******     NAVBAR STUFF     ******/
#main-navba {
  position: fixed;
  z-index: 1;
  width: 100%;
  margin: 0 auto 0 auto;
  background-color: rgba(255,255,255,0.5)
}
.navbar-default .navbar-nav>li>a {
  color: #333;
}

.navbar-default .navbar-brand {
  color: #333;
}

.navbar-default .navbar-nav>li>a:hover,
.navbar-default .navbar-nav>li>a:focus {
  color: #6CF;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
  color: #6CF;
}

.navbar-brand {
  font-size: 27px;
}
/******     END NAVBAR STUFF     ******/

/******     DEMO CSS     ******/
.demo-container {
  background-color:#000000;
  border-radius: 5px;
  margin: 1px;
  padding-right: 5px;
  padding-left: 5px;
  line-height: 1.15;
}

.enclosingDiv {
  padding: 0px;
}

.waveform {
  padding-right: 5px;
  padding-left: 5px;
  color: #FFF;
}

.waveLabelSpan {
  display: block;
  font-size: 20px;
}

.graphWrapper {
}

.graph {
  height: 125px;
  margin: 5px auto 5px 0;
  width:100%;
}

.numeric {
  padding-right: 5px;
  padding-left: 5px;
  color: #FFF;
}

.numericLabelSpan {
  display: block;
  font-size: 20px;
}

.valueSpan {
  display: block;
  font-size: 100px;
  text-align: center;
}

#header-demo {
  margin-bottom: 10px;
}

#webcam {
  background-color:#000000;
}
.videowrapper {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px; 
    height: 0; 
    overflow: hidden;
}
.videowrapper iframe, 
.videowrapper object,
.videowrapper embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#connectionStateAlert {
  width: 125px;
  display: inline;
  position: absolute;
  right: 30px;
  z-index: 2;
}

#connectionStateAlert.sticky {
    position: fixed;
    opacity: 0.75;
    top: 30px;
}

/******     END DEMO CSS     ******/

/*****     SITE-WIDE STUFF    *****/

#logo-banner-holder {
  padding-left: 0px;
  padding-right: 0px;
  position: relative;
}

#logo-banner {
  width: 100%;
}

#logo {
  height: 100px;
  padding-left: 0px;
}

#footer {
  border-top: 1px solid #DDD;
  padding-top: 75px;
  padding-bottom: 50px;
  background-color: #F7FCFF;
  color: #333;
  text-align: center;
}
.footer-repos {
  display: inline-block;
  padding-right: 10px;
  margin: 10px 10px 25px 10px;

}
.footer-repos-a {
  color: #333;
}
.footer-span {
  display: block;
  margin: 15px 1px 25px 1px;
}

.page-container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

@media (min-width: 768px) {
  .page-container {
    padding-right: 15px;
    padding-left: 15px;
    width: 700px;
  }
}

@media (min-width: 992px) {
  .page-container {
    padding-right: 15px;
    padding-left: 15px; 
    width: 700px;
  }
}

@media (min-width: 1200px) {
  .page-container {
    width: 920px;
  }
}
/*****     END SITE-WIDE STUFF     *****/

/******     LANDING PAGE     ******/

#landing-jumbotron {
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: auto;
  margin-right: auto;
  padding: 0px;
}
.carousel-caption {
  background: -moz-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%, rgba(179,179,179,0) 70%, rgba(255,255,255,0) 100%);
  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,1)), color-stop(70%,rgba(179,179,179,0)), color-stop(100%,rgba(255,255,255,0)));
  background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%,rgba(179,179,179,0) 70%,rgba(255,255,255,0) 100%);
  background: -o-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%,rgba(179,179,179,0) 70%,rgba(255,255,255,0) 100%);
  background: -ms-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%,rgba(179,179,179,0) 70%,rgba(255,255,255,0) 100%);
}
#landing-text-container {
  overflow: auto;
  margin-bottom: 50px;
}
#landing-text-title {
  font-weight: 300;
  text-align: center;
  font-size: 72px;
}
#landing-text-caption li {
  font-weight: 300;
  font-size: 24px;
  padding: 5px;
  text-indent: -15px;
}
#landing-text-chevron {
  font-size: 2.5em;
  margin-top: 15px;
  margin-bottom: 5px;
  text-align: center;
}
@media (max-width: 1000px) {
  #landing-text-title {
    font-size: 36px;
  }
}
@media (min-width: 1000px) {
  #landing-text-title {
    font-size: 72px;
  }
}
.section-landing-link {
  display: block;
  position: relative;
  padding-top: 75px;
  padding-bottom: 100px;
  overflow: auto;
}
.section-landing-link-back {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #2D2D2C;
  z-index: -1;
}
.landing-container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}
@media (min-width: 768px) {
  .landing-container {
    width: 750px;
  }
}
@media (min-width: 1200px) {
  .landing-container {
    width: 1170px;
  }
}
.landing-link-heading {
  color: #FFF;
  margin-top: 0;
  margin-bottom: 45px;
  font-weight: 300;
  font-size: 3em;
}
.landing-link {
  padding: 5px;
  margin: 0px;
}
.landing-link-light {
  padding: 5px;
  margin: 0px;
}
.landing-link-light-back {
  margin: 5px;
  background-color: #FFF;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
}
.landing-link-title {
  position:absolute;
  left:0;
  right:0;
  margin-left:auto;
  margin-right:auto;
  top: 40px;
  width: 250px;
  text-align: center;
  color: #FFF;
  background: -moz-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%, rgba(179,179,179,0) 70%, rgba(255,255,255,0) 100%);
  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,1)), color-stop(70%,rgba(179,179,179,0)), color-stop(100%,rgba(255,255,255,0)));
  background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%,rgba(179,179,179,0) 70%,rgba(255,255,255,0) 100%);
  background: -o-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%,rgba(179,179,179,0) 70%,rgba(255,255,255,0) 100%);
  background: -ms-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%,rgba(179,179,179,0) 70%,rgba(255,255,255,0) 100%);
}
.landing-link-title-light {
  position:absolute;
  left:0;
  right:0;
  margin-left:auto;
  margin-right:auto;
  top: 40px;
  width: 250px;
  text-align: center;
  color: #000;
  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 70%, rgba(255,255,255,0) 100%);
  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,1)), color-stop(70%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,0)));
  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 80%,rgba(255,255,255,0) 100%);
  background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 70%,rgba(255,255,255,0) 100%);
  background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 70%,rgba(255,255,255,0) 100%);
}

.landing-link a:hover > img {
  opacity: 0.4;
}
.landing-link-light a:hover > img {
  opacity: 0.4;
}

.section-landing-slogan {
  display: block;
  position: relative;
  padding-top: 75px;
  padding-bottom: 100px;
  overflow: auto;
}
#landing-info h1 {
  text-align: center;
  font-weight: 300;
  overflow: scroll;
  padding: 5px;
}
#landing-info h3 {
  text-align: center;
  font-weight: 300;
  margin-top: 50px;
}
.section-whatis {
  margin-top: 75px;
  margin-bottom: 100px;
}
.section-whatis-image {
  height: 500px;
  margin-right: auto;
  margin-left: auto;
}
.section-community {
  display: block;
  position: relative;
  height: 485px;
  text-align: center;
}
.section-community-back {
  background: url(../assets/community.jpeg);
  background-position: center top;
  background-size: cover;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
}
.section-community-heading {
  color: #FFF;
  padding-top: 88px;
  padding-bottom: 25px;
  font-size: 5em;
  font-weight: 300;
  margin: 0px;
}
.section-community-caption {
  color: #FFF;
  font-size: 3em;
  font-weight: 300;
  margin: 0;
  padding: 0;
}
.section-community-caption:hover {
  color: #6CF;
}
.section-community-glyphicons {
  color: #FFF;
  padding-top: 10px;
  padding-bottom: 30px;
}
.section-community-glyphicon1 {
  position: relative;
  left: 25px;
  font-size: 5em;
}
.section-community-glyphicon2 {
  position: relative;
  font-size: 8em;
}
.section-community-glyphicon3 {
  position: relative;
  right: 25px;
  font-size: 5em;
}

@-webkit-keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}
@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}
.fadeIn {
  animation: fadeIn 2s;
  -webkit-animation: fadeIn 2s;
}

/******     END LANDING PAGE     ******/


/******     DIAGNOSTICS PAGE     *****/
.description {
	margin-left: 10%;
	font-size: 10pt;
	font-style: italic;
	width:70%;
	margin-right:20%;
	margin-bottom: 20pt;
}
#connectionStatus {
  position: absolute;
  right: 8px;
}
#connectionStatus.sticky {
    position: fixed;
    opacity: 0.5;
    top: 0px;
}
.table-diagnostic {
  border-collapse: collapse;
}
.table-diagnostic td {
  padding: 3px;
  border: 1px solid #ddd;
}
.table-heading{
  overflow: scroll;
}
@-moz-document url-prefix() {
  fieldset { display: table-cell; }
} /* Firefox fix for fieldset bug */

/*****     END OF DIAGNOSTICS PAGE     *****/


/*****     SOFTWARE PAGE     *****/
.software-link {
  text-align: center;
}
.section-software {
  margin-top: 25px;
}
.section-downloads {
  margin-top: 75px;
  margin-bottom: 100px;
}

/*****     END OF SOFTWARE PAGE     *****/

/*****     RESOURCES PAGE     *****/
.section-links {
  margin-top: 25px;
  margin-bottom: 100px;
}

/*****     END OF RESOURCES PAGE     *****/


/* Don't know what these are for... */

dt, dd {
  padding-top: 8px;
}

